<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/prs_logo" />

    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
        android:id="@+id/search_layout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="#026159"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:visibility="visible"
        app:corner_radius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="top"
                android:text="@string/choose_one"
                android:textAlignment="center"
                android:textColor="#FC9E033A"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!--<Button-->
                <!--android:id="@+id/galleryBT"-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="140dp"-->
                <!--android:drawableTop="@drawable/camera_icon"-->
                <!--android:text="@string/open_gallery"-->
                <!--android:textAllCaps="false" />-->


        </LinearLayout>

        <!--<Spinner-->
            <!--android:id="@+id/spinner"-->
            <!--android:layout_width="280dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="#ffffff"-->
            <!--android:textAlignment="center"></Spinner>-->

        <Button
            android:id="@+id/searcch_button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#123456"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/entry_button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#123456"
            android:text="@string/enter_data"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/resultview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="10dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--android:visibility="visible"-->
        <!--tools:ignore="WebViewLayout">-->

        <WebView
            android:id="@+id/data_view"
            android:layout_width="330dp"
            android:layout_height="550dp" />

    <!--</LinearLayout>-->
</LinearLayout>